# queries-nyc-taxi-data

./: README.md  pyproject.toml
.github/workflows/: elementary.yml
edr_target/: elementary_output.json  elementary_report.html
taxi_rides_ny/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
taxi_rides_ny/edr_target/: elementary_output.json  elementary_report.html
taxi_rides_ny/models/: schema.yml  test_green_taxi_data.sql
