[tool.poetry]
name = "queries-nyc-taxi-data"
version = "0.1.0"
description = ""
authors = ["Arthur Gusmão <arthurgusmao@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "^1.7.6"
dbt-core = "^1.7.11"
elementary-data = {extras = ["bigquery"], version = "^0.14.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
